# XAI_ensemblings_BS_MS

./: .gitignore  Functionalities_showcase.ipynb  LICENSE  Metrics.py  Metrics_development_tests.ipynb  README.md  data_preparation.ipynb  explanations.ipynb  first_model.ipynb  pyproject.toml  requirements.txt
EnsembleXAI/: Ensemble.py  Metrics.py  Normalization.py
EnsembleXAI/tests/: test_Ensemble.py  test_Metrics.py
docs/: EnsembleXAI.rst  Example_notebook.ipynb  Installation.rst  Usage_Example.rst  conf.py  index.rst  modules.rst
docs/_build/doctrees/: EnsembleXAI.Ensemble.doctree  EnsembleXAI.Metrics.doctree  EnsembleXAI.doctree  Example_notebook.doctree  Installation.doctree  Usage_Example.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/doctrees/nbsphinx/: Example_notebook.ipynb
docs/_build/html/: .buildinfo  EnsembleXAI.Ensemble.html  EnsembleXAI.Metrics.html  EnsembleXAI.html  Example_notebook.html  Example_notebook.ipynb  Installation.html  Usage_Example.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
models/: mnasnet0_5
notebooks/: Functionalities_showcase.ipynb  Imagenet_results.ipynb  Imagenet_results_summaries.ipynb  Imagenet_tests.ipynb  Metrics_development_tests.ipynb  Sesam_simple_model.ipynb  Sesame_data_preparation.ipynb  Sesame_metrics_for_aggregated.ipynb  Sesame_modeling.ipynb  Sesame_results.ipynb  explanations.ipynb  imagenet_aggregated_results.csv  results_plots.ipynb
results/: imagenet_aggregated_results.csv  sesame_aggregated_results.csv
(+6 files in other folders)
